🐛 Fix: select box drawer menu text visibility was poor

--- a/stylesheets/home.css
+++ b/stylesheets/home.css
@@ -136,6 +136,10 @@ select {
 	cursor: pointer;
 }
 
+option {
+    color: initial;
+}
+
 h2 {
 	font-size: 24px;
 	margin-block: 14px;
